src/snapshots/euvd_rs__ui__tests__assigner_picker_overlay.snap
---
source: src/ui.rs
expression: "render(&mut app, 100, 30).backend()"
---
" EUVD    1 Latest │ 2 Latest Exploited │ 3 Latest Critical │ 4 Search │ 5 Lookup                    "
"┌ Filters ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Text:                     Vendor:                 Product:                 Assigner: CERT-PL,my-c│"
"│ From date: YYYY-MM-DD  To date: YYYY-MM-DD  Exploited: Any                                       │"
"│ CVSS min:       CVSS max:       EPSS% min:       EPSS% max:                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Results · set filters and press Enter ───────────────────────────────────────────────────────────┐"
"│EUVD ID           CVE             CVSS  EPSS   Published    Description                           │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                             ┌ Assigners ───────────────────────────┐                             │"
"│                             │ [ ] ENISA                            │                             │"
"│                             │ [ ] NCSC-FI                          │                             │"
"│                             │ [ ] NCSC-NL                          │                             │"
"│                             │ [x] CERT-PL                          │                             │"
"│                             │ [ ] SK-CERT                          │                             │"
"│                             └──────────────────────────────────────┘                             │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" j/k, ↑↓ move · Space toggle · Ctrl-U clear · Enter/Esc done                                        "
