src/snapshots/euvd_rs__ui__tests__detail_overlay.snap
---
source: src/ui.rs
expression: "render(&mut app, 100, 30).backend()"
---
" EUVD    1 Latest │ 2 Latest Exploited │ 3 Latest Critical │ 4 Search │ 5 Lookup                    "
"┌ F┌ EUVD-2026-41256 ───────────────────────────────────────────────────────────────────────────┐──┐"
"│ T│      CVSS: 9.8 (v3.1)   EPSS: 1.50%                                                        │  │"
"│ F│    Vector: CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:H                                    │  │"
"│ C│   Aliases: CVE-2026-33592 · GHSA-xxxx-yyyy-zzzz                                            │  │"
"└──│  Assigner: ENISA                                                                           │──┘"
"┌ R│ Published: Jul 2, 2026, 7:12:24 AM                                                         │──┐"
"│  │   Updated: Jul 2, 2026, 12:30:18 PM                                                        │  │"
"│▶ │   Vendors: open62541 project                                                               │ c│"
"│  │                                                                                            │ t│"
"│  │Affected products                                                                           │na│"
"│  │  • o6 Automation GmbH — Open62541  (1.5.0 ≤1.5.4)                                          │  │"
"│  │                                                                                            │  │"
"│  │Description                                                                                 │  │"
"│  │An unauthenticated remote attacker can exhaust server memory.                               │  │"
"│  │                                                                                            │  │"
"│  │References (press 1-9 to open)                                                              │  │"
"│  │   1. https://example.com/advisory                                                          │  │"
"│  │   2. https://example.com/patch                                                             │  │"
"│  │                                                                                            │  │"
"│  │                                                                                            │  │"
"│  │                                                                                            │  │"
"│  │                                                                                            │  │"
"│  │                                                                                            │  │"
"│  │                                                                                            │  │"
"│  │                                                                                            │  │"
"│  │                                                                                            │  │"
"│  │                                                                                            │  │"
"└──└────────────────────────────────────────────────────────────────────────────────────────────┘──┘"
" j/k scroll · g/G top/bottom · 1-9/o open reference · Esc/q back                                    "
