src/snapshots/euvd_rs__ui__tests__filters_with_cursor_mid_text.snap
---
source: src/ui.rs
expression: "render(&mut app, 100, 30).backend()"
---
" EUVD    1 Latest │ 2 Latest Exploited │ 3 Latest Critical │ 4 Search │ 5 Lookup                    "
"┌ Filters ─────────────────┐┌ Results · set filters and press Enter ───────────────────────────────┐"
"│      Text: openssl       ││EUVD ID     CVE         CVSS  EPSS   Published    Description         │"
"│    Vendor:               ││                                                                      │"
"│   Product:               ││                                                                      │"
"│  Assigner:               ││                                                                      │"
"│ From date: YYYY-MM-DD    ││                                                                      │"
"│   To date: YYYY-MM-DD    ││                                                                      │"
"│ Exploited: Any           ││                                                                      │"
"│  CVSS min:               ││                                                                      │"
"│  CVSS max:               ││                                                                      │"
"│ EPSS% min:               ││                                                                      │"
"│ EPSS% max:               ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
" type to edit · Tab/↑↓ move · Enter search · Ctrl-U clear · Esc results                             "
