src/snapshots/euvd_rs__ui__tests__help_overlay.snap
---
source: src/ui.rs
expression: "render(&mut app, 100, 30).backend()"
---
" EUVD    1 Latest │ 2 Latest Exploited │ 3 Latest Critical │ 4 Search │ 5 Lookup                    "
"┌ Filters ─────────────────┐┌ Results · 123 total · page 1/3 ──────────────────────────────────────┐"
"│      Text: openssl       ││  EUVD ID    CVE        CVSS  EPSS   Published    Description         │"
"│    Vendor:               ││▶ EUVD-2026- CVE-2026-3 9.8   1.5%   Jul 2, 2026  An unauthenticated r│"
"│   Product:               ││  EUVD-2026- CVE-2026-5 5.1   1.5%   Jul 2, 2026  Server-Side Request │"
"│  Assigner:        ┌ Help ────────────────────────────────────────────────────┐ use-after-free dur│"
"│ From date: YYYY-MM│                                                          █                   │"
"│   To date: YYYY-MM│ Navigation                                               █                   │"
"│ Exploited: Any    │  1-5, Tab    switch tabs                                 █                   │"
"│  CVSS min:        │  j/k, ↑↓     move selection / scroll                     █                   │"
"│  CVSS max:        │  g/G         jump to top / bottom                        █                   │"
"│ EPSS% min:        │  Enter       open details / run search                   █                   │"
"│ EPSS% max:        │  Esc         back / leave input                          █                   │"
"│                   │                                                          █                   │"
"│                   │ Search                                                   █                   │"
"│                   │  /           focus filters                               █                   │"
"│                   │  c           collapse / expand the filters               █                   │"
"│                   │  n/p, ←→     next / previous page                        █                   │"
"│                   │  Space       cycle exploited / pick assigners            █                   │"
"│                   │  ←/→         move cursor in a text input                 █                   │"
"│                   │  Ctrl-U      clear focused field                         ║                   │"
"│                   │  r           re-run search / refresh feed                ║                   │"
"│                   │                                                          ║                   │"
"│                   │ Details                                                  ║                   │"
"│                   │  1-9         open n-th reference in browser              ║                   │"
"│                   └──────────────────────────────────────────────────────────┘                   │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
" j/k, ↑↓ scroll · g/G top/bottom · Esc close                                                        "
