src/snapshots/euvd_rs__ui__tests__help_overlay_scrolled_to_bottom.snap
---
source: src/ui.rs
expression: "render(&mut app, 100, 30).backend()"
---
" EUVD    1 Latest │ 2 Latest Exploited │ 3 Latest Critical │ 4 Search │ 5 Lookup                    "
"┌ Filters ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Text: openssl             Vendor:                 Product:                 Assigner:             │"
"│ From date: YYYY-MM-DD  To date: YYYY-MM-DD  Exploited: Any                                       │"
"│ CVSS min:       CVSS max:       EPSS% min:       EPSS% max:                                      │"
"└───────────────────┌ Help ────────────────────────────────────────────────────┐───────────────────┘"
"┌ Results · 123 tota│  Esc         back / leave input                          ║───────────────────┐"
"│  EUVD ID          │                                                          ║                   │"
"│▶ EUVD-2026-41256  │ Search                                                   ║d remote attacker c│"
"│  EUVD-2026-41276  │  /           focus filters                               ║st Forgery in the t│"
"│  EUVD-2026-41277  │  n/p, ←→     next / previous page                        █during PKCS#7 signa│"
"│                   │  Space       cycle exploited / pick assigners            █                   │"
"│                   │  ←/→         move cursor in a text input                 █                   │"
"│                   │  Ctrl-U      clear focused field                         █                   │"
"│                   │  r           re-run search / refresh feed                █                   │"
"│                   │                                                          █                   │"
"│                   │ Details                                                  █                   │"
"│                   │  1-9         open n-th reference in browser              █                   │"
"│                   │  o           open first reference                        █                   │"
"│                   │                                                          █                   │"
"│                   │ General                                                  █                   │"
"│                   │  ?           toggle this help                            █                   │"
"│                   │  q, Ctrl-C   quit                                        █                   │"
"│                   │  Ctrl+       zoom in                                     █                   │"
"│                   │  Ctrl-       zoom out                                    █                   │"
"│                   └──────────────────────────────────────────────────────────┘                   │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" j/k, ↑↓ scroll · g/G top/bottom · Esc close                                                        "
