src/snapshots/euvd_rs__ui__tests__initial_screen.snap
---
source: src/ui.rs
expression: "render(&mut App::new(), 100, 30).backend()"
---
" EUVD    1 Latest │ 2 Latest Exploited │ 3 Latest Critical │ 4 Search │ 5 Lookup                    "
"┌ Latest · 0 records (API returns at most 8 I think) ──────────────────────────────────────────────┐"
"│EUVD ID           CVE             CVSS  EPSS   Published    Description                           │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" j/k move · Enter details · r refresh · 1-5/Tab tabs · ? help · q quit                              "
