src/snapshots/euvd_rs__ui__tests__search_results_with_collapsed_filters.snap
---
source: src/ui.rs
expression: "render(&mut app, 100, 30).backend()"
---
" EUVD    1 Latest │ 2 Latest Exploited │ 3 Latest Critical │ 4 Search │ 5 Lookup                    "
"┌ Results · 123 total · page 1/3 ──────────────────────────────────────────────────────────────────┐"
"│  EUVD ID           CVE             CVSS  EPSS   Published    Description                         │"
"│▶ EUVD-2026-41256   CVE-2026-33592  9.8   1.5%   Jul 2, 2026  An unauthenticated remote attacker c│"
"│  EUVD-2026-41276   CVE-2026-54430  5.1   1.5%   Jul 2, 2026  Server-Side Request Forgery in the t│"
"│  EUVD-2026-41277   CVE-2026-54431  —     1.5%   Jul 2, 2026  A use-after-free during PKCS#7 signa│"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" j/k move · Enter details · n/p page · / filters · c show · 1-5/Tab tabs · r rerun · ? help · q quit"
