src/snapshots/euvd_rs__ui__tests__search_results_with_scrollbar.snap
---
source: src/ui.rs
expression: "render(&mut app, 100, 30).backend()"
---
" EUVD    1 Latest │ 2 Latest Exploited │ 3 Latest Critical │ 4 Search │ 5 Lookup                    "
"┌ Filters ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Text: openssl             Vendor:                 Product:                 Assigner:             │"
"│ From date: YYYY-MM-DD  To date: YYYY-MM-DD  Exploited: Any                                       │"
"│ CVSS min:       CVSS max:       EPSS% min:       EPSS% max:                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Results · 30 total · page 1/1 ───────────────────────────────────────────────────────────────────┐"
"│  EUVD ID           CVE             CVSS  EPSS   Published    Description                         █"
"│▶ EUVD-2026-00000   CVE-2026-00000  5.0   1.5%   Jul 2, 2026  A vulnerability that pads out the re█"
"│  EUVD-2026-00001   CVE-2026-00001  5.0   1.5%   Jul 2, 2026  A vulnerability that pads out the re█"
"│  EUVD-2026-00002   CVE-2026-00002  5.0   1.5%   Jul 2, 2026  A vulnerability that pads out the re█"
"│  EUVD-2026-00003   CVE-2026-00003  5.0   1.5%   Jul 2, 2026  A vulnerability that pads out the re█"
"│  EUVD-2026-00004   CVE-2026-00004  5.0   1.5%   Jul 2, 2026  A vulnerability that pads out the re█"
"│  EUVD-2026-00005   CVE-2026-00005  5.0   1.5%   Jul 2, 2026  A vulnerability that pads out the re█"
"│  EUVD-2026-00006   CVE-2026-00006  5.0   1.5%   Jul 2, 2026  A vulnerability that pads out the re█"
"│  EUVD-2026-00007   CVE-2026-00007  5.0   1.5%   Jul 2, 2026  A vulnerability that pads out the re█"
"│  EUVD-2026-00008   CVE-2026-00008  5.0   1.5%   Jul 2, 2026  A vulnerability that pads out the re█"
"│  EUVD-2026-00009   CVE-2026-00009  5.0   1.5%   Jul 2, 2026  A vulnerability that pads out the re█"
"│  EUVD-2026-00010   CVE-2026-00010  5.0   1.5%   Jul 2, 2026  A vulnerability that pads out the re█"
"│  EUVD-2026-00011   CVE-2026-00011  5.0   1.5%   Jul 2, 2026  A vulnerability that pads out the re█"
"│  EUVD-2026-00012   CVE-2026-00012  5.0   1.5%   Jul 2, 2026  A vulnerability that pads out the re█"
"│  EUVD-2026-00013   CVE-2026-00013  5.0   1.5%   Jul 2, 2026  A vulnerability that pads out the re█"
"│  EUVD-2026-00014   CVE-2026-00014  5.0   1.5%   Jul 2, 2026  A vulnerability that pads out the re║"
"│  EUVD-2026-00015   CVE-2026-00015  5.0   1.5%   Jul 2, 2026  A vulnerability that pads out the re║"
"│  EUVD-2026-00016   CVE-2026-00016  5.0   1.5%   Jul 2, 2026  A vulnerability that pads out the re║"
"│  EUVD-2026-00017   CVE-2026-00017  5.0   1.5%   Jul 2, 2026  A vulnerability that pads out the re║"
"│  EUVD-2026-00018   CVE-2026-00018  5.0   1.5%   Jul 2, 2026  A vulnerability that pads out the re║"
"│  EUVD-2026-00019   CVE-2026-00019  5.0   1.5%   Jul 2, 2026  A vulnerability that pads out the re║"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" j/k move · Enter details · n/p page · / filters · 1-5/Tab tabs · r rerun · ? help · q quit         "
